# NocTerminal

./: Cargo.toml
docs/: .$nocterminal.drawio.bkp  nocterminal.drawio
src/: atlas.rs  lib.rs  main.rs  point.rs  rectangle.rs  shape.rs  size.rs  state.rs  terminal.rs  texture.rs  tileset.rs  vertex.rs
src/images/: yatta.png~
src/shaders/: shader.wgsl
