[package]
name = "nocterminal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.15.1"
winit = "0.28.3"
pollster = "0.3.0"
env_logger = "0.10.0"
bytemuck = { version = "1.12", features = ["derive"] }
anyhow = "1.0.51"
bitmaps = "3.2.0"
num = "0.4.0"
num-traits = "0.2.14"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]
